# iskillmatching

./: README.md  main.py  pyproject.toml
data/: jobs_requirements.csv  jobs_requirements_ner.csv  prepare_skills_data.py  skills.csv
data/skills/: test.txt  train.txt  valid.txt
src/iskillmatching/: __init__.py  clean_utils.py  extract.py  extract_ner.py  extract_spacy.py  ner_utils.py  normalize_utils.py  skills.py  spacy_utils.py
