[project]
name = "iskillmatching"
version = "0.1.0"
description = "Job / resume skill matching"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=3.0.1",
    "pip>=26.0.1",
    "spacy>=3.8.11",
    "transformers>=5.3.0",
    "sentence-transformers",
    "scikit-learn",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/iskillmatching"]

[project.scripts]
iskillmatching-extract = "iskillmatching.extract:main"
